--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "YeJi Yun- UX/UI designer + Cognitive psychology"
 logo: "/img/logo/nelogo_topbar.svg"
 description: "Hi, Nice to meet you. I'm YeJi.<br> check this out!"
-baseurl: /portfolio-website
+baseurl: "http://localhost:4000/portfolio-website/"
 url: "localhost://4000" 
 github_username: "yejiyun"
 
